# AntBank

./: .gitignore  eslint.config.js  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/banks/: 示例题库.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnswerCard.css  AnswerCard.tsx  BankSelect.css  BankSelect.tsx  Button.css  Button.tsx  ConfirmDialog.css  ConfirmDialog.tsx  HighlightText.tsx  MetaCard.css  MetaCard.tsx  MetaItem.css  MetaItem.tsx  PageHeader.css  PageHeader.tsx  PageLayout.css  PageLayout.tsx  PanelList.css  PanelList.tsx  QuestionCard.css  QuestionCard.tsx  SelectableList.css  SelectableList.tsx  SettingsGroup.css  SettingsGroup.tsx  SettingsItem.css  SettingsItem.tsx  Toggle.css  Toggle.tsx  index.ts
src/components/Sidebar/: Sidebar.css  Sidebar.tsx  index.ts  types.ts  usePopoverPosition.ts  useSidebarExpand.ts
src/components/layout/: CenterLayout.css  CenterLayout.tsx  FixedFooter.css  FixedFooter.tsx  SplitPane.css  SplitPane.tsx  index.ts
src/hooks/: index.ts  useSearch.ts
src/pages/: BankManagerPage.css  BankManagerPage.tsx  BrowsePage.tsx  PracticePage.css  PracticePage.tsx  SearchPage.css  SearchPage.tsx  SettingsPage.css  SettingsPage.tsx  WelcomePage.css  WelcomePage.tsx  index.ts
src/services/: BankService.ts  index.ts
src/stores/: BankContext.tsx  SettingsContext.tsx  index.ts
